--- a/.github/workflows/download-rpms.yml
+++ b/.github/workflows/download-rpms.yml
@@ -6,7 +6,7 @@ on:
       packages:
         description: "rpm name (separated by spaces)"
         required: true
-        default: "conntrack-tools socat ipset iptables ipvsadm"
+        default: "gcc-c++ gcc-gfortran"
       release_tag:
         description: "latest"
         required: true
@@ -32,7 +32,7 @@ jobs:
         run: |
           docker run --rm --platform linux/arm64 \
             -v ${{ github.workspace }}/rpms:/tmp/rpms \
-            macrosan/kylin:v10-sp1 /bin/bash -c "
+            macrosan/kylin:v10-sp3 /bin/bash -c "
             yum makecache && \
             dnf install dnf-plugins-core -y && \
             cd /tmp/rpms && \
